fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Einbeziehung hochgeladener Bilder und Dateien in die exportierten Daten",
   "{{count}} more user": "{{count}} mehr Nutzer",
   "{{count}} more user_plural": "{{count}} weitere Nutzer",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "Keine Ergebnisse",
   "{{authorName}} created <3></3>": "{{authorName}} hat <3></3> erstellt",
