fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Incluyendo imágenes y archivos subidos en los datos exportados",
   "{{count}} more user": "{{count}} usuario más",
   "{{count}} more user_plural": "{{count}} usuarios más",
+  "Filter options": "Filter options",
   "Filter": "Filtro",
   "No results": "No hay resultados",
   "{{authorName}} created <3></3>": "{{authorName}} ha creado <3></3>",
