fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Zahrnout nahrané obrázky a soubory do exportovaných dat",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filtr",
   "No results": "Žádné výsledky",
   "{{authorName}} created <3></3>": "{{authorName}} vytvořil <3></3>",
