--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Inklusiv uploadede billeder og filer i de eksporterede data",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "No results",
   "{{authorName}} created <3></3>": "{{authorName}} created <3></3>",
