fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Includere immagini e file caricati nei dati esportati",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filtro",
   "No results": "Nessun risultato",
   "{{authorName}} created <3></3>": "Creato\n\n\n\n\n\n\n\n",
