fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Geüploade afbeeldingen en bestanden worden aan de geëxporteerde data toegevoegd",
   "{{count}} more user": "{{count}} gebruiker meer",
   "{{count}} more user_plural": "{{count}} gebruikers meer",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "Geen resultaten",
   "{{authorName}} created <3></3>": "{{authorName}} heeft <3></3> aangemaakt",
