fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "A incluir imagens e ficheiros nos dados a exportar",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filtrar",
   "No results": "Sem resultados",
   "{{authorName}} created <3></3>": "{{authorName}} criado <3></3>",
