fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Inkluderar uppladdade bilder och filer i den exporterade datan",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "Inga resultat",
   "{{authorName}} created <3></3>": "{{authorName}} öppnade <3></3>",
