--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Yüklenen resimler ve dosyalar dahil olmak üzere verilerin dışa aktarılması",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filtre",
   "No results": "Sonuç bulunamadı",
   "{{authorName}} created <3></3>": "{{authorName}} created <3></3>",
