fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Включити завантажені зображення та файли в експортовані дані",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Фільтр",
   "No results": "Нічого не знайдено",
   "{{authorName}} created <3></3>": "{{authorName}} створив <3></3>",
