--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "导出数据中包含上传的图片和文件",
   "{{count}} more user": "{{count}} 个用户",
   "{{count}} more user_plural": "{{count}} 个用户",
+  "Filter options": "Filter options",
   "Filter": "筛选",
   "No results": "没有结果",
   "{{authorName}} created <3></3>": "{{authorName }} 已创建>",
