--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "在輸出的數據中將會包含您上傳的圖片跟文件",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "篩選器",
   "No results": "找不到任何結果",
   "{{authorName}} created <3></3>": "{{authorName}}建立了<3></3>",
