fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Bao gồm hình ảnh và tệp đã tải lên trong dữ liệu đã xuất",
   "{{count}} more user": "{{count}} thành viên nữa",
   "{{count}} more user_plural": "{{count}} thành viên nữa",
+  "Filter options": "Filter options",
   "Filter": "Bộ Lọc",
   "No results": "Không có kết quả",
   "{{authorName}} created <3></3>": "{{authorName}} đã tạo <3></3>",
