fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Incluindo imagens e arquivos carregados nos dados exportados",
   "{{count}} more user": "Mais {{count}} usuários",
   "{{count}} more user_plural": "{{count}} mais usuários",
+  "Filter options": "Filter options",
   "Filter": "Filtro",
   "No results": "Sem resultados",
   "{{authorName}} created <3></3>": "{{authorName}} criou <3></3>",
