--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Including uploaded images and files in the exported data",
   "{{count}} more user": "{{count}} more user",
   "{{count}} more user_plural": "{{count}} more users",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "Tak ada hasil",
   "{{authorName}} created <3></3>": "{{authorName}} created <3></3>",
