fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -286,6 +286,7 @@
   "Including uploaded images and files in the exported data": "Inkludere opplastede bilder og filer i de eksporterte dataene",
   "{{count}} more user": "{{count}} til bruker",
   "{{count}} more user_plural": "{{count}} flere brukere",
+  "Filter options": "Filter options",
   "Filter": "Filter",
   "No results": "Ingen resultater",
   "{{authorName}} created <3></3>": "{{authorName}} opprettet <3></3>",
