--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -175,7 +175,7 @@
   "currently viewing": "ser nå",
   "previously edited": "tidligere redigert",
   "You": "Du",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Profilbilde av {{ name }}",
   "Viewers": "Seere",
   "Collections are used to group documents and choose permissions": "Samlinger brukes til å gruppere dokumenter og velge tillatelser",
   "Name": "Navn",
@@ -206,7 +206,7 @@
   "Move document": "Flytt dokument",
   "Moving": "Flytter",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Ved å flytte dokumentet <em>{{ title }}</em> til samlingen {{ newCollectionName }}, vil tilgangen endres for alle brukere i arbeidsområdet fra <em>{{ prevPermission }}</em> til <em>{{ newPermission }}</em>.",
-  "More options": "More options",
+  "More options": "Flere alternativer",
   "Submenu": "Undermeny",
   "Collections could not be loaded, please reload the app": "Samlinger kunne ikke lastes inn, vennligst last inn appen på nytt",
   "Start view": "Startvisning",
@@ -286,7 +286,7 @@
   "Including uploaded images and files in the exported data": "Inkludere opplastede bilder og filer i de eksporterte dataene",
   "{{count}} more user": "{{count}} til bruker",
   "{{count}} more user_plural": "{{count}} flere brukere",
-  "Filter options": "Filter options",
+  "Filter options": "Filtervalg",
   "Filter": "Filter",
   "No results": "Ingen resultater",
   "{{authorName}} created <3></3>": "{{authorName}} opprettet <3></3>",
@@ -318,12 +318,12 @@
   "Permission": "Tillatelse",
   "Change Language": "Bytt språk",
   "Dismiss": "Avvis",
-  "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "Lightbox": "Lysboks",
+  "View, navigate, or download images in the document": "Vis, naviger, eller last ned bilder i dokumentet",
   "Close": "Lukk",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Forrige",
+  "Next": "Neste",
+  "Image failed to load": "Bildet kunne ikke lastes",
   "You’re offline.": "Du er frakoblet.",
   "Sorry, an error occurred.": "Beklager, det oppstod en feil.",
   "Click to retry": "Klikk for å prøve igjen",
@@ -332,7 +332,7 @@
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
   "Icon": "Ikon",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "OAuth-klientikon",
   "My App": "Min app",
   "Tagline": "Slagord",
   "A short description": "En kort beskrivelse",
@@ -409,15 +409,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupper er lagt til i dokumentet",
   "{{ count }} groups added to the document_plural": "{{ count }} grupper er lagt til i dokumentene",
   "Logo": "Logo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Vis sidepanel",
+  "Collapse sidebar": "Skjul sidepanelet",
   "Archived collections": "Arkiverte samlinger",
   "New doc": "Nytt dokument",
   "Empty": "Tom",
   "Collapse": "Kollaps",
   "Expand": "Utvid",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument ikke støttet – prøv Markdown, ren tekst, HTML eller Word",
-  "Import files": "Import files",
+  "Import files": "Importer filer",
   "Go back": "Gå tilbake",
   "Go forward": "Gå frem",
   "Could not load shared documents": "Kunne ikke laste delte dokumenter",
@@ -467,8 +467,8 @@
   "Replacement": "Erstatning",
   "Replace": "Erstatt",
   "Replace all": "Erstatt alle",
-  "Image width": "Image width",
-  "Image height": "Image height",
+  "Image width": "Bildebredde",
+  "Image height": "Bildehøyde",
   "Profile picture": "Profilbilde",
   "Create a new doc": "Lag et nytt dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} vil ikke bli varslet, da de ikke har tilgang til dette dokumentet",
@@ -495,8 +495,8 @@
   "Create a new child doc": "Lag et nytt underdokument",
   "Delete table": "Slett tabell",
   "Delete file": "Slett fil",
-  "Width": "Width",
-  "Height": "Height",
+  "Width": "Bredde",
+  "Height": "Høyde",
   "Download file": "Last ned fil",
   "Replace file": "Erstatt fil",
   "Delete image": "Slett bilde",
@@ -690,7 +690,7 @@
   "only you": "kun deg",
   "person": "person",
   "people": "personer",
-  "Document title": "Document title",
+  "Document title": "Dokumenttittel",
   "Last updated": "Sist oppdatert",
   "Type '/' to insert, or start writing…": "Skriv '/' for å sette inn, eller begynn å skrive…",
   "Hide contents": "Skjul innhold",
@@ -935,7 +935,7 @@
   "Rotate secret": "Roter klientnøkkel",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotering vil ugyldiggjøre gjeldende klientnøkkel. Sørg for å oppdatere alle applikasjoner med disse nøklene.",
   "Displayed to users when authorizing": "Vist til brukere ved autorisering",
-  "Application icon": "Application icon",
+  "Application icon": "Applikasjonsikon",
   "Developer information shown to users when authorizing": "Utviklerinformasjon som vises til brukere ved autorisering",
   "Developer name": "Utviklernavn",
   "Developer URL": "Utvikler-URL",
@@ -999,7 +999,7 @@
   "Search people": "Søk i personer",
   "No people matching your search": "Ingen personer matcher søket ditt",
   "No people left to add": "Ingen flere personer å legge til",
-  "Group admin": "Group admin",
+  "Group admin": "Gruppeadministrator",
   "Member": "Medlem",
   "Admins": "Administratorer",
   "Date created": "Dato opprettet",
@@ -1043,7 +1043,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Disse innstillingene påvirker måten arbeidsområdet ditt vises for alle på teamet.",
   "Display": "Visning",
   "The logo is displayed at the top left of the application.": "Logo vises øverst til venstre i applikasjonen.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Logo for arbeidsområde",
   "The workspace name, usually the same as your company name.": "Arbeidsområdets navn, vanligvis det samme som firmanavnet ditt.",
   "Description": "Beskrivelse",
   "A short description of your workspace.": "En kort beskrivelse av arbeidsområdet ditt.",
@@ -1274,7 +1274,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} oppdaterte {{ timeAgo }}",
   "You created {{ timeAgo }}": "Du opprettet {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} opprettet {{ timeAgo }}",
-  "Caption": "Caption",
-  "Open": "Open",
+  "Caption": "Bildetekst",
+  "Open": "Åpen",
   "Error loading data": "Feil ved lasting av data"
 }
