fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -175,7 +175,7 @@
   "currently viewing": "momenteel aan het bekijken",
   "previously edited": "eerder bewerkt",
   "You": "Jij",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "Avatar van {{ name }}",
   "Viewers": "Kijkers",
   "Collections are used to group documents and choose permissions": "Collecties worden gebruikt om documenten te groeperen en rechten te kiezen",
   "Name": "Naam",
@@ -206,7 +206,7 @@
   "Move document": "Document verplaatsen",
   "Moving": "Verplaatsen",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Het document <em>{{ title }}</em> verplaatsen naar de {{ newCollectionName }} collectie zal de rechten voor alle werkruimte van <em>{{ prevPermission }}</em> wijzigen naar <em>{{ newPermission }}</em>.",
-  "More options": "More options",
+  "More options": "Meer opties",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Collecties konden niet worden geladen, start de app alsjeblieft opnieuw op",
   "Start view": "Start weergave",
@@ -286,7 +286,7 @@
   "Including uploaded images and files in the exported data": "Geüploade afbeeldingen en bestanden worden aan de geëxporteerde data toegevoegd",
   "{{count}} more user": "{{count}} gebruiker meer",
   "{{count}} more user_plural": "{{count}} gebruikers meer",
-  "Filter options": "Filter options",
+  "Filter options": "Filter opties",
   "Filter": "Filter",
   "No results": "Geen resultaten",
   "{{authorName}} created <3></3>": "{{authorName}} heeft <3></3> aangemaakt",
@@ -319,11 +319,11 @@
   "Change Language": "Wijzig taal",
   "Dismiss": "Negeer",
   "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Close": "Sluiten",
-  "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Previous": "Vorige",
+  "Next": "Volgende",
+  "Image failed to load": "Afbeelding kan niet worden geladen",
   "You’re offline.": "Je bent offline.",
   "Sorry, an error occurred.": "Sorry, er is iets fout gegaan.",
   "Click to retry": "Klik om opnieuw te proberen",
@@ -332,7 +332,7 @@
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
   "Icon": "Icon",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "OAuth cliënt icoon",
   "My App": "Mijn App",
   "Tagline": "Tagline",
   "A short description": "Een korte beschrijving",
@@ -409,15 +409,15 @@
   "{{ count }} groups added to the document": "{{ count }} persoon uitgenodigd voor het document",
   "{{ count }} groups added to the document_plural": "{{ count }} persoon uitgenodigd voor het document",
   "Logo": "Logo",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "Zijbalk uitvouwen",
+  "Collapse sidebar": "Zijbalk invouwen",
   "Archived collections": "Zoek in collecties",
   "New doc": "Nieuw document",
   "Empty": "Leeg",
   "Collapse": "Invouwen",
   "Expand": "Uitvouwen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document niet ondersteund - probeer Markdown, platte tekst, HTML of Word",
-  "Import files": "Import files",
+  "Import files": "Bestanden importeren",
   "Go back": "Vorige",
   "Go forward": "Volgende",
   "Could not load shared documents": "Kan gedeelde documenten niet laden",
@@ -467,8 +467,8 @@
   "Replacement": "Vervanging",
   "Replace": "Vervang",
   "Replace all": "Vervang alle",
-  "Image width": "Image width",
-  "Image height": "Image height",
+  "Image width": "Afbeelding breedte",
+  "Image height": "Afbeelding hoogte",
   "Profile picture": "Profielfoto",
   "Create a new doc": "Maak een nieuw document",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wordt niet verwittigd omdat ze geen toegang hebben tot dit document",
@@ -495,8 +495,8 @@
   "Create a new child doc": "Maak een nieuw subdocument",
   "Delete table": "Tabel verwijderen",
   "Delete file": "Verwijder bestand",
-  "Width": "Width",
-  "Height": "Height",
+  "Width": "Breedte",
+  "Height": "Hoogte",
   "Download file": "Download bestand",
   "Replace file": "Vervang bestand",
   "Delete image": "Afbeelding verwijderen",
@@ -690,7 +690,7 @@
   "only you": "alleen jij",
   "person": "persoon",
   "people": "personen",
-  "Document title": "Document title",
+  "Document title": "Documenttitel",
   "Last updated": "Laatst bijgewerkt",
   "Type '/' to insert, or start writing…": "Typ '/' om in te voegen of begin met schrijven…",
   "Hide contents": "Inhoud verbergen",
@@ -935,7 +935,7 @@
   "Rotate secret": "Geheim opnieuw genereren",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Het opnieuw genereren van het clientgeheim zal het huidige geheim ongeldig maken. Zorg ervoor dat je alle applicaties met behulp van deze inloggegevens bijwerkt.",
   "Displayed to users when authorizing": "Weergegeven aan gebruikers bij autorisatie",
-  "Application icon": "Application icon",
+  "Application icon": "App-icoon",
   "Developer information shown to users when authorizing": "Ontwikkelaarsinformatie die wordt getoond aan gebruikers bij autoriseren",
   "Developer name": "Ontwikkelaar naam",
   "Developer URL": "Ontwikkelaar URL",
@@ -999,8 +999,8 @@
   "Search people": "Personen zoeken",
   "No people matching your search": "Geen personen die aan de zoekopdracht voldoen",
   "No people left to add": "Geen personen meer om toe te voegen",
-  "Group admin": "Group admin",
-  "Member": "Member",
+  "Group admin": "Groepsbeheerder",
+  "Member": "Gebruiker",
   "Admins": "Beheerders",
   "Date created": "Aanmaakdatum",
   "Crop Image": "Afbeelding bijsnijden",
@@ -1043,7 +1043,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Deze instellingen zijn van invloed op de manier waarop je workspace voor iedereen in het team wordt weergegeven.",
   "Display": "Toon",
   "The logo is displayed at the top left of the application.": "Het logo wordt weergegeven in de linkerbovenhoek van de applicatie.",
-  "Workspace logo": "Workspace logo",
+  "Workspace logo": "Logo werkruimte",
   "The workspace name, usually the same as your company name.": "De naam van het team, meestal dezelfde als de naam van uw bedrijf.",
   "Description": "Beschrijving",
   "A short description of your workspace.": "Een korte beschrijving van je werkruimte.",
@@ -1274,7 +1274,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ timeAgo }} door {{ user }} bijgewerkt",
   "You created {{ timeAgo }}": "{{ timeAgo }} door jou aangemaakt",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} door {{ user }} aangemaakt",
-  "Caption": "Caption",
+  "Caption": "Onderschrift",
   "Open": "Open",
   "Error loading data": "Fout bij laden van gegevens"
 }
