fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -35,13 +35,13 @@
   "Mark as resolved": "标记为已解决",
   "Thread resolved": "话题已解决",
   "Mark as unresolved": "标记为未解决",
-  "View reactions": "",
+  "View reactions": "查看回应",
   "Reactions": "回应",
   "Copy ID": "复制 ID",
   "Clear IndexedDB cache": "清除 IndexedDB 缓存",
   "IndexedDB cache cleared": "IndexedDB 缓存已清除",
-  "Clear local storage": "Clear local storage",
-  "Local storage cleared": "Local storage cleared",
+  "Clear local storage": "清除本地存储",
+  "Local storage cleared": "本地存储已清除",
   "Toggle debug logging": "切换调试日志",
   "Debug logging enabled": "调试日志已启用",
   "Debug logging disabled": "调试日志已禁用",
@@ -319,11 +319,11 @@
   "Change Language": "更改语言",
   "Dismiss": "忽略",
   "Lightbox": "Lightbox",
-  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "View, navigate, or download images in the document": "",
   "Close": "关闭",
   "Previous": "Previous",
-  "Next": "Next",
-  "Image failed to load": "Image failed to load",
+  "Next": "下一个",
+  "Image failed to load": "图像加载失败",
   "You’re offline.": "你已离线。",
   "Sorry, an error occurred.": "抱歉，出错了。",
   "Click to retry": "点击重试",
@@ -409,8 +409,8 @@
   "{{ count }} groups added to the document": "{{ count }} 个组被添加到此文档",
   "{{ count }} groups added to the document_plural": "{{ count }} 个组被添加到此文档",
   "Logo": "网站图标",
-  "Expand sidebar": "Expand sidebar",
-  "Collapse sidebar": "Collapse sidebar",
+  "Expand sidebar": "展开侧边栏",
+  "Collapse sidebar": "收起侧边栏",
   "Archived collections": "归档文档集",
   "New doc": "新建文档",
   "Empty": "空",
@@ -451,7 +451,7 @@
   "Name can't be empty": "名称不能为空",
   "Check your email to verify the new address.": "请检查您的电子邮件以验证新地址。",
   "The email will be changed once verified.": "验证后电子邮件将被更改。",
-  "You will receive an email to verify your new address. It must be unique in the workspace.": "您将收到一封电子邮件来验证您的新地址。它在工作区中是唯一的。",
+  "You will receive an email to verify your new address. It must be unique in the workspace.": "我们将向您的新邮箱地址发送一封验证邮件。请注意，该邮箱需在工作区内尚未被使用。",
   "A confirmation email will be sent to the new address before it is changed.": "确认邮件将在更改前发送到新地址。",
   "New email": "新的邮箱地址",
   "Email can't be empty": "邮箱地址不能为空",
@@ -620,7 +620,7 @@
   "mentioned you in": "提及你在",
   "left a comment on": "留下评论在",
   "resolved a comment on": "回复了一个评论于",
-  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
+  "reacted {{ emoji }} to your comment on": "对您的评价做出了 {{ emoji }} 反应",
   "shared": "已共享",
   "invited you to": "邀请你加入",
   "Choose a date": "选择一个日期",
@@ -690,7 +690,7 @@
   "only you": "仅你自己",
   "person": "人",
   "people": "用户",
-  "Document title": "Document title",
+  "Document title": "文档标题",
   "Last updated": "最后更新",
   "Type '/' to insert, or start writing…": "输入'/'来插入，或开始写...",
   "Hide contents": "隐藏内容",
@@ -1275,6 +1275,6 @@
   "You created {{ timeAgo }}": "{{ timeAgo }} 由你创建",
   "{{ user }} created {{ timeAgo }}": "{{ timeAgo }} 由 {{ user }} 创建",
   "Caption": "Caption",
-  "Open": "Open",
+  "Open": "打开",
   "Error loading data": "加载数据时出错"
 }
