fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -40,8 +40,8 @@
   "Copy ID": "复制 ID",
   "Clear IndexedDB cache": "清除 IndexedDB 缓存",
   "IndexedDB cache cleared": "IndexedDB 缓存已清除",
-  "Clear local storage": "清除本地存储",
-  "Local storage cleared": "本地存储已清除",
+  "Clear local storage": "清除本地存储数据",
+  "Local storage cleared": "本地存储数据已清除",
   "Toggle debug logging": "切换调试日志",
   "Debug logging enabled": "调试日志已启用",
   "Debug logging disabled": "调试日志已禁用",
@@ -55,7 +55,7 @@
   "Publish document": "发布文档",
   "Unpublish": "取消发布",
   "Unpublished {{ documentName }}": "取消发布 {{ documentName }}",
-  "Subscription inherited from collection": "从收藏继承下来的订阅",
+  "Subscription inherited from collection": "订阅权限继承自集合",
   "Share this document": "共享此文档",
   "HTML": "HTML",
   "PDF": "PDF",
@@ -145,7 +145,7 @@
   "Go to collection": "转到文档集",
   "Go to document": "转到文档",
   "Revoke link": "撤消链接",
-  "Share link revoked": "此分享链接已被撤销",
+  "Share link revoked": "分享链接已被取消",
   "Switch workspace": "切换工作区",
   "Select a workspace": "选择工作区",
   "New workspace": "新建工作区",
@@ -175,7 +175,7 @@
   "currently viewing": "正在浏览",
   "previously edited": "先前已编辑",
   "You": "你",
-  "Avatar of {{ name }}": "Avatar of {{ name }}",
+  "Avatar of {{ name }}": "{{ name }}的头像",
   "Viewers": "浏览者",
   "Collections are used to group documents and choose permissions": "文档集用于对文档进行分组和权限管理",
   "Name": "名称",
@@ -206,7 +206,7 @@
   "Move document": "移动文档",
   "Moving": "移动",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "将文档 <em>{{ title }}</em> 移动到 {{ newCollectionName }} 集合将使所有工作区成员的权限从 <em>{{ prevPermission }}</em> 更改为 <em>{{ newPermission }}</em>。",
-  "More options": "More options",
+  "More options": "更多选项",
   "Submenu": "子菜单",
   "Collections could not be loaded, please reload the app": "无法加载文档集，请重新加载应用",
   "Start view": "开始浏览",
@@ -318,10 +318,10 @@
   "Permission": "权限",
   "Change Language": "更改语言",
   "Dismiss": "忽略",
-  "Lightbox": "Lightbox",
+  "Lightbox": "大图模式",
   "View, navigate, or download images in the document": "",
   "Close": "关闭",
-  "Previous": "Previous",
+  "Previous": "上一个",
   "Next": "下一个",
   "Image failed to load": "图像加载失败",
   "You’re offline.": "你已离线。",
@@ -332,7 +332,7 @@
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "你已了解所有情况",
   "Icon": "图标",
-  "OAuth client icon": "OAuth client icon",
+  "OAuth client icon": "OAuth 客户端图标",
   "My App": "我的应用",
   "Tagline": "标识语",
   "A short description": "一个简短的描述",
@@ -451,7 +451,7 @@
   "Name can't be empty": "名称不能为空",
   "Check your email to verify the new address.": "请检查您的电子邮件以验证新地址。",
   "The email will be changed once verified.": "验证后电子邮件将被更改。",
-  "You will receive an email to verify your new address. It must be unique in the workspace.": "我们将向您的新邮箱地址发送一封验证邮件。请注意，该邮箱需在工作区内尚未被使用。",
+  "You will receive an email to verify your new address. It must be unique in the workspace.": "我们将向您的新邮箱地址发送一封验证邮件。请注意，该邮箱在工作区内需尚未被使用。",
   "A confirmation email will be sent to the new address before it is changed.": "确认邮件将在更改前发送到新地址。",
   "New email": "新的邮箱地址",
   "Email can't be empty": "邮箱地址不能为空",
@@ -840,7 +840,7 @@
   "subdomain": "子域",
   "Continue": "继续操作",
   "Sorry, the code you entered is invalid or has expired.": "对不起，您输入的验证码无效或已过期。",
-  "The domain associated with your email address has not been allowed for this workspace.": "与你的电子邮件地址相关联的域未被允许在此工作区使用。",
+  "The domain associated with your email address has not been allowed for this workspace.": "与您电子邮箱地址相关联的域名未被允许在此工作区使用。",
   "Unable to sign-in. Please navigate to your workspace's custom URL, then try to sign-in again.<1></1>If you were invited to a workspace, you will find a link to it in the invite email.": "无法登录。请导航至你工作区的自定义 URL，然后尝试重新登录。<1></1>如果你受邀加入某个工作区，你会在邀请电子邮件中找到指向该工作区的链接。",
   "Sorry, a new account cannot be created with a personal Gmail address.<1></1>Please use a Google Workspaces account instead.": "抱歉，不能使用个人 Gmail 地址创建新帐户。<1></1>请改用 Google Workspaces 帐户。",
   "The workspace associated with your user is scheduled for deletion and cannot be accessed at this time.": "与你的用户相关联的工作区已计划删除，目前无法访问。",
@@ -859,7 +859,7 @@
   "Choose a workspace": "选择一个工作区",
   "Choose an {{ appName }} workspace or login to continue connecting this app": "选择 {{ appName }} 工作区或登录以继续连接该应用",
   "Create workspace": "创建工作区",
-  "Setup your workspace by providing a name and details for admin login. You can change these later.": "通过提供管理员登录的名称和详细信息来设置你的工作区。你可以稍后再修改。",
+  "Setup your workspace by providing a name and details for admin login. You can change these later.": "请为您的工作区命名并设置管理员登录信息。这些信息之后可随时编辑。",
   "Workspace name": "工作区名称",
   "Admin name": "管理员名称",
   "Admin email": "管理员邮箱",
@@ -869,9 +869,9 @@
   "Check the network requests and server logs for full details of the error.": "检查网络请求和服务器日志以获取错误的完整详细信息。",
   "Custom domain setup": "自定义域设置",
   "Almost there": "即将完成",
-  "Your custom domain is successfully pointing at Outline. To complete the setup process please contact support.": "你的自定义域已成功指向 Outline。要完成设置过程，请联系技术支持。",
+  "Your custom domain is successfully pointing at Outline. To complete the setup process please contact support.": "您的域名已成功指向 Outline。要继续完成相关设置，请联系技术支持。",
   "Choose workspace": "选择工作区",
-  "This login method requires choosing your workspace to continue": "这种登录方法需要选择工作区才能继续",
+  "This login method requires choosing your workspace to continue": "这种登录方法需选择工作区才能继续",
   "Check your email": "检查你的电子邮件",
   "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "输入发送到邮箱的验证码 <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "如果帐户存在，魔法登录链接已发送至电子邮件 <em>{{ emailLinkSentTo }}</em>。",
@@ -982,7 +982,7 @@
   "{{userName}} requested": "{{userName}} 已请求",
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "群组用于管理你的团队。当以职能或责任为中心时，工作效果最好 — 例如支持类或工程类。",
   "You’ll be able to add people to the group next.": "接下来，你将能够将人员添加到群组中。",
-  "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "你可以随时编辑该群组的名称，但过于频繁可能会使你的队友感到困惑。",
+  "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "您可以随时修改此群组的名称，但过于频繁的更改可能会造成团队成员的困惑。",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "你确定吗？删除 <em>{{groupName}}</em> 组将使其成员无法访问它所关联的文档集和文档。",
   "Add people to {{groupName}}": "添加用户到 {{groupName}}",
   "{{userName}} was removed from the group": "从群组中移除 {{userName}}。",
@@ -1112,7 +1112,7 @@
   "Notifications saved": "通知配置已保存",
   "Unsubscription successful. Your notification settings were updated": "取消订阅成功。你的通知设置已更新",
   "Manage when and where you receive email notifications.": "管理你接收电子邮件通知的时间和地点。",
-  "The email integration is currently disabled. Please set the associated environment variables and restart the server to enable notifications.": "电子邮件集成当前已禁用。请设置相关的环境变量并重新启动服务器以启用通知。",
+  "The email integration is currently disabled. Please set the associated environment variables and restart the server to enable notifications.": "电子邮箱集成当前已禁用。请配置相关环境变量并重新启动服务以启用通知。",
   "Preferences saved": "首选项已保存",
   "Delete account": "删除账户",
   "Manage settings that affect your personal experience.": "管理影响你个人体验的设置。",
@@ -1128,7 +1128,7 @@
   "Automatically return to the document you were last viewing when the app is re-opened.": "重新打开应用程序时自动返回到你上次浏览的文档。",
   "Smart text replacements": "智能文本替换",
   "Auto-format text by replacing shortcuts with symbols, dashes, smart quotes, and other typographical elements.": "用符号、破折号、 智能引号和其他排版元素替换快捷方式来自动格式化文本。",
-  "You may delete your account at any time, note that this is unrecoverable": "你可以随时删除你的帐户，请注意这不可恢复",
+  "You may delete your account at any time, note that this is unrecoverable": "您可以随时删除您的帐户，请注意这不可恢复",
   "Profile saved": "配置已保存",
   "Profile picture updated": "头像已更新",
   "Unable to upload new profile picture": "无法上传个人图片",
@@ -1139,7 +1139,7 @@
   "Email address": "电子邮件地址",
   "Are you sure you want to require invites?": "你确定要发出邀请吗？",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "新用户首先需要通过邀请来创建一个账户。 <em>默认角色</em> 和 <em>允许的域</em> 将不再适用。",
-  "Settings that impact the access, security, and content of your workspace.": "影响你工作区中访问权限、安全性和内容的设置。",
+  "Settings that impact the access, security, and content of your workspace.": "工作区全局设置：访问权限、安全性与内容管理。",
   "Allow members to sign-in with {{ authProvider }}": "允许成员使用 {{ authProvider }} 登录",
   "Disabled": "已禁用",
   "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件地址登录",
@@ -1175,7 +1175,7 @@
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "删除 <1>{{workspaceName}}</1> 工作区将销毁所有文档集、文档、用户和关联数据。 您将立即登出 {{appName}}。",
   "Please note that workspaces are completely separated. They can have a different domain, settings, users, and billing.": "请注意，工作区是完全分离的。它们可以有不同的域、设置、用户和账单。",
   "You are creating a new workspace using your current account — <em>{{email}}</em>": "你正在使用当前账户创建新的工作区 —— <em>{{email}}</em>",
-  "To create a workspace under another email please sign up from the homepage": "若要在另一个电子邮件下创建工作区，请从主页注册",
+  "To create a workspace under another email please sign up from the homepage": "若需使用其他电子邮箱创建工作区，请前往首页完成注册。",
   "Trash emptied": "回收站为空",
   "Are you sure you want to permanently delete all the documents in Trash? This action is immediate and cannot be undone.": "你确定要永久删除回收站中的所有文档吗？此操作是立即的且无法撤消。",
   "Recently deleted": "最近删除的",
@@ -1210,9 +1210,9 @@
   "Enable previews of Linear issues in documents by connecting a Linear workspace to {appName}.": "将一个 Linear 工作区连接到 {appName} 从而可以在文档中预览 Linear Issues。",
   "Disconnecting will prevent previewing Linear links from this workspace in documents. Are you sure?": "断开链接将会使此工作区中文档中的 Linear 链接不再可以被预览。你确定吗？",
   "The Linear integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "Linear 集成已被禁用。请设置相关的环境变量并重新启动服务以启用此集成。",
-  "Configure a Matomo installation to send views and analytics from the workspace to your own Matomo instance.": "配置一个 Matomo 安装，将视图和分析从工作区发送到你的 Matomo 实例。",
+  "Configure a Matomo installation to send views and analytics from the workspace to your own Matomo instance.": "配置安装 Matomo ，将视图和分析从工作区发送至您的 Matomo 实例。",
   "Instance URL": "实例 URL",
-  "The URL of your Matomo instance. If you are using Matomo Cloud it will end in matomo.cloud/": "你的 Matomo 实例 URL。如果你使用 Matomo 云，它将在 matomo.cloud/ 中结束。",
+  "The URL of your Matomo instance. If you are using Matomo Cloud it will end in matomo.cloud/": "请输入您的 Matomo 实例。若您使用的是 Matomo Cloud 云服务，您的地址通常以 matomo.cloud/ 结尾。",
   "Site ID": "站点 ID",
   "An ID that uniquely identifies the website in your Matomo instance.": "在你的 Matomo 实例中识别网站的唯一ID。",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "糟糕，您需要接受 Notion 中的权限才能将 {{ appName }} 连接到您的工作区。再试一次？",
@@ -1225,10 +1225,10 @@
   "This will prevent any future updates from being posted to this Slack channel. Are you sure?": "这将阻止将来的任何更新被发布到此Slack频道。你确定吗？",
   "Whoops, you need to accept the permissions in Slack to connect {{appName}} to your workspace. Try again?": "糟糕，你需要在 Slack 中接受权限才能将 {{appName}} 连接到你的工作区。再试一次？",
   "Personal account": "个人账号",
-  "Link your {{appName}} account to Slack to enable searching and previewing the documents you have access to, directly within chat.": "将你的 {{appName}} 帐户链接到Slack，以便直接在聊天中搜索和预览你可以访问的文档。",
-  "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?": "断开你的个人帐户会无法从Slack搜索文档。你确定吗？",
+  "Link your {{appName}} account to Slack to enable searching and previewing the documents you have access to, directly within chat.": "只需将您的 {{appName}} 账户关联至 Slack ，即可在聊天界面中无缝搜索并预览您有权访问的所有文档。",
+  "Disconnecting your personal account will prevent searching for documents from Slack. Are you sure?": "解除您个人账户的关联后，将无法再从 Slack 中搜索文档。是否确认继续？",
   "Slash command": "斜杠命令",
-  "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.": "获取 Slack 中共享的 {{ appName }} 预览链接，并使用 <em>{{ command }}</em> 斜杠命令搜索文档而无需离开聊天。",
+  "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.": "当您在 Slack 中分享 {{ appName }} 的链接时，可直接获得内容预览。您还可使用 <em>{{ command }}</em> 斜杠命令直接搜索文档，无需离开聊天窗口，体验无缝集成的工作流。",
   "This will remove the Outline slash command from your Slack workspace. Are you sure?": "这将从你的 Slack 工作区中移除 Outline 斜杠命令。你确定吗?",
   "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.": "将 {{appName}} 文档集连接到 Slack 频道，当文档发布或更新时，消息将自动发布到 Slack。",
   "Comment by {{ author }} on \"{{ title }}\"": "{{ author }} 对 \"{{ title }}\" 的评论",
@@ -1240,7 +1240,7 @@
   "It looks like you haven’t linked your {{ appName }} account to Slack yet": "看起来你还没有将你的 {{ appName }} 帐户连接到Slack",
   "Link your account": "关联你的帐户",
   "Link your account in {{ appName }} settings to search from Slack": "在 {{ appName }} 设置中连接你的帐户以从Slack中搜索",
-  "Configure a Umami installation to send views and analytics from the workspace to your own Umami instance.": "配置 Umami 安装以将视图和分析从工作区发送到您自己的 Umami 实例。",
+  "Configure a Umami installation to send views and analytics from the workspace to your own Umami instance.": "配置 Umami 安装以将视图和分析从工作区发送至您的 Umami 实例。",
   "The URL of your Umami instance. If you are using Umami Cloud it will begin with {{ url }}": "Umami 实例的 URL。如果你使用 Umami Cloud，它将以 {{ url }} 开始",
   "Script name": "脚本名称",
   "The name of the script file that Umami uses to track analytics.": "Umami 用于跟踪分析的脚本文件名称。",
@@ -1265,7 +1265,7 @@
   "Webhooks can be used to notify your application when events happen in {{appName}}. Events are sent as a https request with a JSON payload in near real-time.": "Webhooks 可以用来在 {{appName}} 中发生事件时通知你的应用程序。事件作为带有 JSON 负载的 https 请求近乎实时地发送。",
   "Inactive": "未激活",
   "Create a webhook": "创建一个 Webhook",
-  "Zapier is a platform that allows {{appName}} to easily integrate with thousands of other business tools. Automate your workflows, sync data, and more.": "Zapier 是一个平台，可以让 {{appName}} 轻松地与数以千计的其他业务工具集成。自动化你的工作流程、同步数据等。",
+  "Zapier is a platform that allows {{appName}} to easily integrate with thousands of other business tools. Automate your workflows, sync data, and more.": "Zapier 是一个平台，可以让 {{appName}} 轻松地与数以千计的其它业务工具集成。自动化您的工作流程、同步数据等。",
   "Never logged in": "从未登录",
   "Online now": "当前在线",
   "Online {{ timeAgo }}": "{{ timeAgo }} 在线",
